--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -41,34 +41,36 @@ img{
         width: 75%;
     }
 }
-
+/*texto principal*/
 .texto-main{
-    font-family: 'Bebas Neue', sans-serif;
+    font-family:$fonts-1;
     font-size: 1.7rem;
 }
+/*cards grandes vueltas*/
 .container-cards{
     display: flex;
     justify-content: space-evenly;
     
-}
-.card-img-top{
-    width: 300px;
-    height: 50%;
-}
-.card{
+    .card{
     display: flex;
     justify-content: center;
-    align-items: center;
-}
+    align-items: center;   
+    height: 100%;
 
-.card-body{
-    display: flex;
-    align-items: center;
-}
-
-.card-body p{
-    font-family: 'Croissant One', cursive;
-    font-size: 1.2rem;
+    .card-img-top{
+        width: 300px;
+        height: 50%;
+    } 
+    .card-body{
+        display: flex;
+        align-items: center;
+        background:linear-gradient(180deg,#fff 10%,#3df4,rgb(78, 216, 189));
+        p{
+            font-family: $fonts-2;
+            font-size: 1.2rem;
+        }
+    }
+    }
 }
 
 @media (max-width:425px){
@@ -96,9 +98,7 @@ img{
         border: solid 1px;
     }
 }
-#nombres-ganadores{
-    display: none;
-}
+
 
 @media (min-width:426px){
     .winners{
