--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -91,7 +91,7 @@
 
 .video{
     gap:25px;
-
+    margin: 0 auto;
     iframe{
         max-width: 100%;
     }
@@ -105,6 +105,7 @@
 @media(max-width:768px){
     .video{
         @include flex-column;
+        
     }
 }
 @media(min-width:769px){
