--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,25 @@ img {
     flex-direction: row;
   }
 }
+h1 {
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.title-carrera {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 2rem;
+}
+
+.botones {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  gap: 20px;
+  margin-top: 10px;
+}
+
 footer {
   display: flex;
   flex-direction: row;
